# SpeexAndroid

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/nfx/speexandroid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: echo_canceller.cpp  native-lib.cpp
app/src/main/java/com/nfx/speexandroid/: AudioTrackPlayer.java  MainActivity.kt
app/src/main/jni/: Android.mk
app/src/main/jni/libspeex/: nb_celp.c
app/src/main/res/values/: strings.xml
app/src/test/java/com/nfx/speexandroid/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
